[gd_scene load_steps=4 format=3 uid="uid://dbdl1sammug54"]

[ext_resource type="Script" path="res://control/scripts/units_control.gd" id="1_7eqsb"]
[ext_resource type="PackedScene" uid="uid://dgubn0nnkt3el" path="res://button/edit_button.tscn" id="1_hvj0g"]
[ext_resource type="PackedScene" uid="uid://cvaht2opsulhx" path="res://button/confirm_button.tscn" id="2_ot70j"]

[node name="UnitsControl" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_7eqsb")

[node name="PickerGroup" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="UnitsOption" type="OptionButton" parent="PickerGroup"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Units"

[node name="EditButton" parent="PickerGroup" instance=ExtResource("1_hvj0g")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TypeGroup" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="UnitsText" type="LineEdit" parent="TypeGroup"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Comma separated list of unit names.
If left blank, the dropdown defaults to Units.
Brackets in a unit name will add prefixes.
[1:3] will add d,da,h,k
[3:1] will add m,c,d,da
[3] will add m,c,d,da,h,k.
Maximum value in brackets is 12"
placeholder_text = "Comma separated list of unit names."
caret_blink = true

[node name="ConfirmButton" parent="TypeGroup" instance=ExtResource("2_ot70j")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
